--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/fs-extra": "^8.0.1",
+    "discord.js": "^11.5.1",
     "fs-extra": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
