--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "discord.js": "^11.5.1",
     "expr-eval": "^2.0.2",
     "fs-extra": "^8.1.0",
+    "monaco-editor": "^0.19.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-monaco-editor": "^0.32.1"
   },
   "devDependencies": {
+    "@types/react-monaco-editor": "^0.16.0",
     "chalk": "^3.0.0",
     "clsx": "^1.0.4",
     "fullstack-system": "^2.7.2",
     "json-schema-defaults": "^0.4.0",
     "jsonschema": "^1.2.5",
+    "monaco-editor-webpack-plugin": "^1.8.1",
     "typescript": "^3.5.3"
   }
 }
