--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^11.5.1",
     "expr-eval": "^2.0.2",
     "fs-extra": "^8.1.0",
+    "glob": "^7.1.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
