--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "rethinkdb": "^2.4.2"
   },
   "devDependencies": {
+    "@types/rethinkdb": "^2.3.14",
     "chalk": "^3.0.0",
     "clsx": "^1.0.4",
     "fullstack-system": "^2.7.2",
