--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "doc": "docs"
   },
   "dependencies": {
+    "@reverse/array": "^1.7.1",
     "@types/fs-extra": "^8.0.1",
     "discord.js": "^11.5.1",
     "expr-eval": "^2.0.2",
     "fs-extra": "^8.1.0",
-    "monaco-editor": "^0.19.0",
     "glob": "^7.1.6",
+    "monaco-editor": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "rethinkdb": "^2.4.2"
