--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@reverse/array": "^1.7.3",
     "@reverse/emitter": "^2.0.5",
     "@types/fs-extra": "^8.0.1",
+    "@types/react-inspector": "^4.0.0",
     "discord.js": "^11.5.1",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
     "monaco-editor": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-inspector": "^4.0.0",
     "rethinkdb": "^2.4.2"
   },
   "devDependencies": {
