--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "monaco-editor": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-draggable": "^4.2.0",
     "react-inspector": "^4.0.0",
     "rethinkdb": "^2.4.2"
   },
