--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reverse/emitter": "^2.0.5",
     "@types/fs-extra": "^8.0.1",
     "@types/react-inspector": "^4.0.0",
+    "body-parser": "^1.19.0",
     "discord.js": "^11.5.1",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
@@ -27,6 +28,7 @@
     "react-dom": "^16.8.6",
     "react-draggable": "^4.2.0",
     "react-inspector": "^4.0.0",
+    "react-spinners": "^0.7.2",
     "rethinkdb": "^2.4.2"
   },
   "devDependencies": {
