--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
     "monaco-editor": "^0.19.0",
+    "node-cache": "^5.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-draggable": "^4.2.0",
