--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-draggable": "^4.2.0",
+    "react-ga": "^2.7.0",
     "react-inspector": "^4.0.0",
     "react-spinners": "^0.7.2",
     "rethinkdb": "^2.4.2"
   },
   "devDependencies": {
+    "@types/react-ga": "^2.3.0",
     "@types/react-monaco-editor": "^0.16.0",
     "@types/rethinkdb": "^2.3.14",
     "chalk": "^3.0.0",
